@@ -382,6 +382,9 @@ Release 2.7.3 - UNRELEASED
     YARN-4610. Reservations continue looking for one app causes other apps to
     starve (jlowe)
 
+    YARN-3768. ArrayIndexOutOfBoundsException with empty environment variables.
+    (Zhihai Xu via gera)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
